fix: form item wrap wrongly

--- a/src/pages/Registration/registration.css
+++ b/src/pages/Registration/registration.css
@@ -17,4 +17,5 @@
 
 .arco-form-label-item{
     text-align: left !important;
+    width: 150px !important;
 }
